[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -120.0
margin_right = 298.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Contain the Virus!"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 316.0
margin_right = 100.0
margin_bottom = 416.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="BulletLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Chamber: 8/8"

[node name="MagLabel" type="Label" parent="."]
margin_left = 174.534
margin_right = 244.534
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Mags: "

[node name="RewardLabel" type="Label" parent="."]
margin_left = 670.0
margin_top = 209.0
margin_right = 1064.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
autowrap = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
